<resources>
    <string name="app_name">RecetarIA</string>
    <string name="bienvenida">GRUPO 7</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="btn_continue_with_google">Continuar con Google</string>
    <string name="no_tenes_cuenta">¿No tenés cuenta?</string>
    <string name="btn_registro">REGISTRATE ACÁ</string>
    <string name="repita_contraseña">Repetir contraseña</string>
    <string name="btn_registro_registro">REGISTRARSE</string>
    <string name="registrate_aca">Registrate aca</string>
    <string name="olvidates_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="registrate">¿No tenés cuenta? Registrate</string>
    <string name="logotipo_recetaria">Logotipo Recetaria</string>
    <string name="recuperar_pass">Recuperar contraseña</string>
    <string name="ingrese_codigo">Ingrese codigo de 6 digitos</string>
    <string name="verificar_email_btn">Verificar Email</string>
    <string name="no_recib_el_codigo">No recibí el código. Reenviar</string>
    <string name="no_es_tu_correo">¿No es tu correo? Registrate de nuevo</string>
    <string name="verificando_tu_cuenta">Estamos verificando tu cuenta</string>
    <string name="ConfigurarPerfil">Configuración de perfil</string>
    <string name="configuracion_de_perfil">Configuración de Perfil</string>
    <string name="ni_os_en_la_familia">Niños</string>
    <string name="apellido">Apellido</string>
    <string name="adultos_en_la_familia">Adultos en la familia</string>
    <string name="nombre">Nombre</string>
    <string name="aceptar">Aceptar</string>
    <string name="es_premium">Es premium</string>
    <string name="Edad">Edad</string>
    <string name="seleccionar_preferencias_alimentarias">Preferencias</string>
    <string name="seleccionar_Restricciones_alimentarias">Restricciones</string>
    <string name="Alimentacion">Alimentación</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="mensaje_bienvenida">¡Antes de continuar, contanos más de vos!</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="preferencias">Preferencias</string>
    <string name="restricciones">Restricciones</string>
    <string name="listo">¡Listo!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aguardando_recetas">¡Ya casi estamos!</string>
    <string name="msj_espera">Nuestra IA está eligiendo las recetas ideales para que hoy te luzcas.</string>
    <string name="nombre_de_la_receta">Nombre de la Receta</string>
    <string name="mis_recetas">Mis Recetas</string>
    <string name="planificar_receta">Planificar Receta</string>
    <string name="ver_detalle">Ver Detalle</string>
    <string name="cancelar">Cancelar</string>
    <string name="elegir">Elegir</string>
    <string name="Cocinar">Cocinar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cambio_contrasenia">Para cambiar tu contraseña debes ingresar el token recibido por email.</string>
    <string name="usuario_correo">usuario@correo.com</string>
    <string name="ingrese_el_token">Ingrese el token de 6 digitos</string>
    <string name="cambiar_contrasenia">CAMBIAR CONTRASEÑA</string>
    <string name="cambiarFecha">Cambiar Fecha</string>
    <string-array name="paises_array">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Ecuador</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
        <item>Otro</item>
    </string-array>
</resources>