<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_claro"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <ImageView
            android:id="@+id/imgLogoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            app:tint="@color/primario"
            android:contentDescription="@string/logotipo_recetaria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_principal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:hint="@string/correo_electronico"
            app:boxCornerRadiusBottomEnd="@dimen/radio_boton"
            app:boxCornerRadiusBottomStart="@dimen/radio_boton"
            app:boxCornerRadiusTopEnd="@dimen/radio_boton"
            app:boxCornerRadiusTopStart="@dimen/radio_boton"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogoLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="@dimen/radio_boton"
            app:boxCornerRadiusBottomStart="@dimen/radio_boton"
            app:boxCornerRadiusTopEnd="@dimen/radio_boton"
            app:boxCornerRadiusTopStart="@dimen/radio_boton"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/btn_ingresar"
            android:background="@drawable/gradiente"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <ProgressBar
            android:id="@+id/loginProgress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btnIngresar"
            app:layout_constraintEnd_toEndOf="@+id/btnIngresar"
            app:layout_constraintStart_toStartOf="@+id/btnIngresar"
            app:layout_constraintTop_toTopOf="@+id/btnIngresar" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_continue_with_google"
            android:textAllCaps="false"

            android:paddingVertical="14dp"
            android:backgroundTint="@color/white"

            app:cornerRadius="@dimen/radio_boton"
            app:icon="@drawable/ic_google_logo"
            app:iconGravity="textStart"
            app:iconPadding="12dp"
            app:iconTint="@null"


            app:strokeColor="#DADADA"
            app:strokeWidth="@dimen/espesor_borde"

            app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/btnRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/registrate"
            android:textColor="@color/gris_plomo"
            android:textSize="14sp"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/btnGoogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/btnOlvidoPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/olvidates_contrasenia"
            android:textColor="@color/primario"
            android:textStyle="bold"
            android:textSize="14sp"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/btnRegistro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>